Closed
Bug 610526
Opened 15 years ago
Closed 14 years ago
Firefox never loads flash in "out of process" mode on some older macs with GMA9xx GPUs
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(blocking2.0 final+)
VERIFIED
FIXED
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | final+ |
People
(Reporter: p225mmx, Assigned: jaas)
References
Details
(Whiteboard: [hardblocker])
Attachments
(2 files, 1 obsolete file)
|
5.69 KB,
application/octet-stream
|
Details | |
|
1.79 KB,
patch
|
benjamin
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:2.0b7) Gecko/20100101 Firefox/4.0b7
Build Identifier: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:2.0b7) Gecko/20100101 Firefox/4.0b7
Firefox in 32bit mode, loads flash "in process"
Firefox in 64bit mode, doesn't load flash, and doesn't offer to install
About:plugins confirms that flash is "loaded" in both 32bit and 64bit mode
File: Flash Player.plugin
Version: 10.1.102.64
Shockwave Flash 10.1 r102
Reproducible: Always
Steps to Reproduce:
1. Run Firefox in 32bit or 64bit mode
2. Visit Flash enabled web site
3. Look for the lack of plugin-container process in activity monitor
Actual Results:
32bit mode, flash content loads.
64bit mode, flash content doesn't load.
32bit mode, flash plugin loads "in process".
64bit mode, flash plugin doesn't load and doesn't offer to install.
Expected Results:
32bit mode, flash content loads and flash plugin loads "out of process"
64bit mode, flash content loads and flash plugin loads "out of process"
This Mac has been upgraded over the years from 10.4.x to 10.5.x to 10.6.4.
Comment 1•15 years ago
|
||
Fx4b7(in 32bit), Flash 10.1.85.3(? it was the previous versions prior to the latest), youtube.com content: Firefox Plugin Process, loads out of process and opens content
Fx4b7(in 64bit), Flash 10.1.0.85r, youtube.com content: Firefox Plugin Process, loads out of process and opens content
Also tried with the latest version of flash 10.1.102.64, and video playback worked well in both modes.
Comment 2•15 years ago
|
||
Sorry, I forgot to revise the second entry above, where "Fx4b7 (in 64bit)" should also read that the Flash version was 10.1.85.3.
Comment 3•15 years ago
|
||
I have actually crashed in OOPP using Beta 7 on Mac, so I know that it works using Flash Version: 10.1.102.64 on x64.
Wondering if the reporter's issue is something that is specific to his machines due to the upgrades from each OS?
Updated•15 years ago
|
Severity: blocker → major
Component: General → Plug-ins
Priority: P1 → --
Product: Firefox → Core
QA Contact: general → plugins
Upgraded to 10.6.5 which was just released, no change in behavior.
Comment 5•15 years ago
|
||
Not blocking on this, but if more data is presented that shows this is a common problem please renominate.
blocking2.0: ? → -
Tested with a completely brand new admin user account profile. Same behavior.
Will test with a clean install of 10.6.5 on an external boot drive this week. If behavior is the same, then Firefox isn't triggering OOPP for some reason, possibly because the laptop is 4years old and it's reporting something Firefox doesn't expect.
If anyone else cares to test, it's a late 2006 white Macbook, core 2 duo 2ghz, GMA950 video card.
Essentially a 1st gen Core2 Duo Macbook.
Kernel runs in 32bit mode, most apps run 64bit mode.
Comment 7•15 years ago
|
||
>
> If anyone else cares to test, it's a late 2006 white Macbook, core 2 duo 2ghz,
> GMA950 video card.
>
> Essentially a 1st gen Core2 Duo Macbook.
>
> Kernel runs in 32bit mode, most apps run 64bit mode.
My hardware specs are exactly the same: 2006 white macbook, core2duo, 2Ghz, 2GB RAM, GMA 950, upgraded over the years to 10.6.6. The only solution is running firefox in 32bit mode, otherwise flash (latest version) just does not work.
So, I can confirm this issue and would like to see it fixed for the final release - if somehow possible...
Comment 8•14 years ago
|
||
Same problem here, Macbook Mid 2007 with Core2Duo 2Ghz and GMA950, OSX 10.6.6. Please fix it, Firefox really is (or feels at least) slower running in 32bit...
Comment 9•14 years ago
|
||
This looks roughly identical to bug 629924. Can anyone experiencing this please attach pluginreg.dat to this bug or that one, as described at https://bugzilla.mozilla.org/show_bug.cgi?id=629924#c6 ?
Comment 10•14 years ago
|
||
I'll make a wild stab in the dark here and say that something about this machine configuration is making Flash revert to CoreGraphics/Carbon events instead of the cocoa event model, in which case we can't run it OOPP.
| Assignee | ||
Comment 11•14 years ago
|
||
Enni - can you also post your graphics card type? Intel GMA9xx or GMAX31xx GPUs may cause this problem.
Comment 12•14 years ago
|
||
Comment 13•14 years ago
|
||
(In reply to comment #11)
> Enni - can you also post your graphics card type? Intel GMA9xx or GMAX31xx GPUs
> may cause this problem.
As I posted above, my mac has a GMA 950.
Comment 14•14 years ago
|
||
I have to add that the problem occurs not only with the flash version indicated by pluginreg.dat (which is the newest 10.2 beta) but also with the current release version (10.1). The only version that somewhat works is Flash Player Square (native 64-bit version), but that has other problems (black screen when in fullscreen etc).
Updated•14 years ago
|
Status: UNCONFIRMED → NEW
blocking2.0: - → final+
Ever confirmed: true
Whiteboard: [hardblocker]
Comment 16•14 years ago
|
||
Josh, what's the plan to make this better? I don't think we can ship with this. Does Adobe have a release pending which would decouple the coregraphics and cocoa event model stuff?
Assignee: nobody → joshmoz
Updated•14 years ago
|
Summary: Firefox never loads flash in "out of process" mode → Firefox never loads flash in "out of process" mode on some older macs with GMA9xx or GMAX31xx GPUs
Comment 17•14 years ago
|
||
I think the problem could be that CoreAnimation is not supported with these graphics card so Flash revert to using QuickDraw/CoreGraphics rather then CoreAnimation/CoreGraphics? Quickdraw not being supported in 64-bit.
Comment 18•14 years ago
|
||
What we want Flash to do is use CoreGraphics/Cocoa when CoreAnimation is blacklisted/not available and not go all the way back to CoreGraphics/Carbon, I think...
| Assignee | ||
Comment 19•14 years ago
|
||
Flash has a bug in which it will negotiate Carbon whether or not Carbon is supported on machines with Intel GMA9xx or GMAX31xx GPUs. Flash properly negotiates Cocoa for all other hardware. Our OOPP implementation can't run plugins that negotiate Carbon. Adobe is aware of this and is working on a fix. In the mean time, I'm not sure what we can do beyond the helper notification in bug 628651, which should be triggered in this situation.
It looks like most MacBooks with GMA9xx graphics are from 2006 and 2007, and would thus be running Mac OS X 10.4 or 10.5 by default. The machines with GMA31xx graphics came out in 2008 for the most part, and would have Mac OS X 10.5 by default. This bug won't show up on anything but Mac OS X 10.6, so it should be limited to people who installed a major OS upgrade to Mac OS X 10.6.
Comment 20•14 years ago
|
||
I have a machine in my desk where I can reproduce the problem. Send email if you need access to it.
Comment 21•14 years ago
|
||
Is there any way for us to detect the bad configuration at runtime? I suppose that this will trigger the infobar from bug 628651 once that's done?
| Assignee | ||
Comment 22•14 years ago
|
||
We found a machine with a GMA950 and another machine with a GMAX3100 card and neither machine has this bug. Flash works just fine. Good news because it probably means fewer machines than we originally thought are affected. There seems to be something in addition to the graphics card that triggers this. Will use Juan's machine to figure out what that is.
We won't know if we can detect this situation at runtime until we figure out what all of the factors are, but this should trigger the infobar from bug 628651. I can confirm later when I can check out Juan's machine.
Comment 23•14 years ago
|
||
This is either a useless "me too" comment or valuable additional data point, depending on your perspective:
I've got a mid-2007 2GHz Mac mini (model Macmini2,1) running Snow Leopard (upgraded from Leopard), which has been exhibiting this problem since late last year. So that's Intel GMA 950 graphics. I believe it's the MB139LL/A model described here:
http://support.apple.com/kb/sp7
According to Wikipedia, the mid-2007 Mac mini was released on August 7th 2007 and replaced by a newer revision on March 3rd 2009. So potentially, this affects all Mac minis purchased during that 19 month period and subsequently upgraded to Snow Leopard (which came out in late 2009, so no mid-2007 Mac minis shipped with Snow Leopard).
Safari works fine and is currently my preferred browser for viewing Flash content.
| Assignee | ||
Comment 24•14 years ago
|
||
Flash 10.2 final may have a fix for this. The fix isn't in the latest public beta of Flash 10.2.
Comment 25•14 years ago
|
||
When are we expecting flash 10.2 final to be released?
| Assignee | ||
Comment 27•14 years ago
|
||
Flash 10.2 final has been released. Can someone who can repro this confirm the fix in Flash 10.2?
Comment 28•14 years ago
|
||
Bug is still there for me with Flash 10.2 final.
Comment 29•14 years ago
|
||
(In reply to comment #27)
> Flash 10.2 final has been released. Can someone who can repro this confirm the
> fix in Flash 10.2?
Still not working. :(
Hardware: Mid-2007 Mac mini (GMA 950)
OS: Snow Leopard 10.6.6
Flash Player: 10.2.152.26
Browser: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:2.0b12pre) Gecko/20110208 Firefox/4.0b12pre
Comment 30•14 years ago
|
||
Using latest-nightly (2010-02-08) and latest Flash (10.2) I'm getting the following behaviour on a MacBook 2,1:
- no infobar asking me to restart in 32-bit mode
- black square where Flash content should be on YouTube (I think that's HTML, though, on the youtube.com main page there's just a white block where I'd expect flash content)
- no Flash context menu
Comment 31•14 years ago
|
||
We should also get a sense of what the potential number of users affected are; might change the blocking call.
| Assignee | ||
Comment 34•14 years ago
|
||
I can't believe I didn't think of this before, I'm thoroughly embarrassed. I bet we're forcing Flash in-process on these machines and of course the 32-bit Flash plugin won't load in a 64-bit browser.
Attachment #512505 -
Attachment is obsolete: true
| Assignee | ||
Comment 35•14 years ago
|
||
Updated•14 years ago
|
Attachment #512515 -
Flags: review+
Comment 36•14 years ago
|
||
Is this checkin-needed?
Summary: Firefox never loads flash in "out of process" mode on some older macs with GMA9xx or GMAX31xx GPUs → Firefox never loads flash in "out of process" mode on some older macs with GMA9xx GPUs
| Assignee | ||
Comment 37•14 years ago
|
||
pushed to mozilla-central
http://hg.mozilla.org/mozilla-central
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 38•14 years ago
|
||
sorry, wrong changeset url
http://hg.mozilla.org/mozilla-central/rev/d73287c7f0fa
Comment 39•14 years ago
|
||
Fix works for me, Flash now loads when Firefox is running in 64bit.
Comment 40•14 years ago
|
||
Works with Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:2.0b12pre) Gecko/20110216 Firefox/4.0b12pre and Flash Player 10.2.152.26 on a mid-2007 Mac mini (GMA 950) running Snow Leopard 10.6.6.
Comment 41•14 years ago
|
||
Verified fixed with Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:2.0b12pre) Gecko/20110215 Firefox/4.0b12pre ID:20110215030353 and my old white MacBook from early 2007.
Status: RESOLVED → VERIFIED
Comment 42•14 years ago
|
||
NOT fixed for 32-bit (Core Duo) machines. They still load Flash "in process".
Why are you still "forcing" Flash in-process on 32 bit machines with GMA950?
Comment 43•14 years ago
|
||
Klaus, what OS version are you running?
Comment 44•14 years ago
|
||
That is bug 640601.
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•