Bug 610526: Fix bug that caused Flash to not load on machines with GMA9xx GPUs. r=bsmedberg a=blocking2.0final+